--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.61.5",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-image-picker": "^1.1.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.15",
